syntax = "proto3";

package calculator;
option go_package = "/calculatorpb";

message SumRequest{
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 sum_result = 1;
}

message SquareRootRequest {
    int32  number = 1;
}

message SquareRootResponse {
    double number_root = 1;
}
service CalculateService{
    rpc Sum(SumRequest) returns (SumResponse){};

    // This rpc will throw the exception if number is negative 
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}